Removed unused files, updated titles base file

--- a/Exe/DragonLogger_Titles.ini
+++ b/Exe/DragonLogger_Titles.ini
@@ -102,6 +102,15 @@ Flesh Mixer=Not content with the physical limitations of any one species, you've
 Lord of Stitches=Welcome to level 50. I think I speak for everyone when I say you're one twisted bastard.
 Lady of Stitches=Welcome to level 50. I think I speak for everyone when I say you're one twisted bastard.
 Flesh Binder=The leg bones connected to the, hip bone, the hip bones connected to the.. elbow.. ? Oh oh.. Ah well, level 60.
+Assembler of Bits=At level 70, you can combine bits and pieces from all manner of beings and things in zany ways.
+Shovel Head=Reaching level 80, you've learned to call a spade a spade, even when it's a shovel.
+Stitch Master=By level 90, apart from being able to assemble a monster in record time, you're also an accomplished clothier.
+Defiler of Burials=At level 100, your reputation as a disturber or the dead has spread far and wide. You're not popular at parties.
+Grave Robber=Achieving level 110, your desire to let no good bodyparts go to waste has reached an unhealthy level of obsession.
+Embalminator=Level 120 grants you the title of Embalminator. They'll be back.
+Wake Ruiner=A suddenly empty casket is a sure sign you're in town. Level 130 means you're more inappropriate than ever!
+Franknfurter=Yes Mein Stitcher! I mean... welcome to level 140.
+Eternal Digger=By level 150, you've become known as the Eternal Digger. No corpse is safe from your clutches... yuck.
 
 [Class-DeathKnight]
 Dark Squire=As you steadily rise up the ranks of the Death Knights and reach level 10, you've attained the official title of Squire amongst their order.
@@ -239,6 +248,10 @@ Miserable Sod=At level 70, even zombies have been known to commit suicide at one
 Dreadbringer=At level 80, consider the dread brung. 
 Harbinger of Misery=Once you reach level 90, it's widely known that wherever you go, misery is sure to follow on a massive scale.
 Living Nightmare=At level 100, you are a living nightmare to all who hear your dread song.
+One Man Orchestra=The creepy noises that accompany you at level 110 sound like a perpetual orchestra of deathcries and deathmetal.
+Misunderstood Musician=By level 120, you're sure that it's just a case of everyone intentionally trying to not understand your music.
+To Die For=If they didn't keep dropping dead from the music, you'd have quite the army of emo's at your disposal at level 130.
+Final Notice=At level 140, your music is the final note, ready to evict souls from their flesh with uncanny ease.
 
 [Class-Reaver]
 Soul Trapper=The first step is learning how to trap souls before they can reach the Dead Gate, and this you've managed to achieve by reaching level 10.
@@ -297,6 +310,7 @@ Tank=You've achieved a defense rating of at least 500.
 Impervious=You've achieved a defense rating of at least 750
 Untouchable=You've achieved a defense rating of at least 2000! Take your best shot!
 Gimmy Ya Best Shot=You're up to 3000 defense rating. Whatever they throw at you, you can take it.
+Immune to Hurtsy=4000 Defense Rating means you're able to withstand asteroid strikes pretty well.
 
 [Attack]
 Dangerous=You've achieved an attack rating of at least 250
@@ -304,6 +318,7 @@ Formidable=You've achieved an attack rating of at least 500.
 Deadly=You've achieved an attack rating of at least 750
 Destroyer=You've achieved an attack rating of at least 2000! Monsters tremble at the sight of you.
 Wrecking Ball=You've reached 3000 Attack Rating, and pretty much destroy everything in your path.
+Godzirra=4000 Attack Rating? RUN!!!!
 
 [ActionPoints]
 Experienced=You've spent at least 1000 Action Points.
